# cargo-superwork

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  release.yml
src/: audit.rs  bump.rs  check.rs  ci.rs  ci_clone.rs  ci_gen.rs  ci_lint.rs  config.rs  dashboard.rs  discover.rs  fix_dual_spec.rs  gh_dashboard.rs  graph.rs  main.rs  manifest.rs  patch.rs  publish.rs  readme_links.rs  release.rs  run.rs  status.rs
