[package]
name = "cargo-superwork"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Multi-repo Rust workspace manager — CI prep, dependency graphs, coordinated releases"
repository = "https://github.com/imazen/cargo-superwork"

[[bin]]
name = "cargo-superwork"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
toml_edit = "0.25.8"
toml = { version = "0.8", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
semver = { version = "1.0.27", features = ["serde"] }
walkdir = "2.5.0"
petgraph = "0.8.3"
